--- a/.github/workflows/OWRT-ALL.yml
+++ b/.github/workflows/OWRT-ALL.yml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       #max-parallel: 3
       matrix:
-        TARGET: [MEDIATEK, ROCKCHIP, X86]
+        TARGET: [MEDIATEK]
         SOURCE: [VIKINGYFY/immortalwrt]
 
     #调用公用编译核心WRT-CORE.yml
