--- a/.github/workflows/QCA-ALL.yml
+++ b/.github/workflows/QCA-ALL.yml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       #max-parallel: 3
       matrix:
-        TARGET: [IPQ60XX-WIFI-YES, IPQ60XX-WIFI-NO, IPQ807X-WIFI-YES, IPQ807X-WIFI-NO]
+        TARGET: [IPQ60XX-WIFI-YES, IPQ60XX-WIFI-NO]
         SOURCE: [VIKINGYFY/immortalwrt]
 
     #调用公用编译核心WRT-CORE.yml
@@ -43,11 +43,11 @@ jobs:
       #默认主题
       WRT_THEME: argon
       #默认主机名
-      WRT_NAME: OWRT
+      WRT_NAME: JDCAX1800
       #默认WIFI名
-      WRT_WIFI: OWRT
+      WRT_WIFI: cmcc
       #默认地址
-      WRT_IP: 192.168.10.1
+      WRT_IP: 192.168.3.18
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #源码链接
