--- a/.github/workflows/WRT-TEST.yml
+++ b/.github/workflows/WRT-TEST.yml
@@ -10,7 +10,7 @@ on:
         default: 'MEDIATEK'
         required: true
         type: choice
-        options: [MEDIATEK, ROCKCHIP, X86, IPQ60XX-WIFI-YES, IPQ60XX-WIFI-NO, IPQ807X-WIFI-YES, IPQ807X-WIFI-NO, TEST]
+        options: [MEDIATEK, IPQ60XX-WIFI-YES, IPQ60XX-WIFI-NO, TEST]
       SOURCE:
         default: 'VIKINGYFY/immortalwrt'
         required: true
